# uv-renovatebot-demo

./: README.md  pyproject.toml  renovate.json
src/uv_renovatebot_demo/: __init__.py
