[project]
name = "uv-renovatebot-demo"
version = "0.1.0"
description = "Practice how to manage uv.lock with renovatebot"
readme = "README.md"
authors = [
    { name = "MtkN1", email = "51289448+MtkN1@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.10.10",
    "awscli>=1.11.18",
    "gradio>=4.44.0",
    "streamlit>=1.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest<8", "coverage"]
typing = ["mypy==1.7.1", "types-requests"]
lint = ["black", "flake8"]
typing-test = [{ include-group = "typing" }, "pytest<8"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typing-test" },
]
